@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.28) unstable; urgency=low
 
   * fcgi-client: support response status
+  * translate: malformed packets are fatal
 
  --
 
